# djangunicornix

./: README.md  flake.nix  manage.py  module.nix  package.nix  pyproject.toml  test.nix
djangunicornix/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
