[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
description = "packaging gunicorn and nix on a django app"
license = "BSD-2-Clause"
name = "djangunicornix"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
Django = "^4.2.1"
gunicorn = "^23.0.0"
python = "^3.12"
uvicorn = "^0.29.0"
